# smd

./: .gitignore  README.md  pyproject.toml
data/csv/: araucarias.csv
data/excel/: bioclimate_araucaria.xlsx  siglas.xlsx
notebooks/: Abrindo_dados_bioclimáticos_worldclim.ipynb  Glossário_SDM_Modelo_de_Distribuição_de_espécies.ipynb  Pegando_dados_do_GBIF.ipynb
smd/: cordia_superba.csv  load_specie.py
smd/bioclim/: bioclim_service.py
smd/bioclim/data/: wc2.1_5m_bio_14.tif
smd/data/: Leontopithecus*.xlsx  Leontopithecus*_ocurrences_map.html
smd/gbif/: gbif_service.py
smd/view/: file_writer.py  map_builder.py
src/: load_specie.py  species.py
src/bioclim/: bioclim_service.py
src/data/: Araucaria*.xlsx  Araucaria*_ocurrences_map.html  Astronium_fraxinifolium.xlsx  Astronium_fraxinifolium_ocurrences_map.html  Leontopithecus*.xlsx  Leontopithecus*_ocurrences_map.html
src/gbif/: gbif_service.py
src/utils/: file_helper.py  stats_helper.py  with_progress.py  with_timer.py
src/view/: file_writer.py  map_builder.py  report_builder.py
