[tool.poetry]
name = "smd"
version = "0.1.0"
description = ""
authors = ["uaipedro <pedromambelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
fiona = "^1.9.5"
rasterio = "^1.3.9"
pandas = "^2.1.4"
pygbif = "^0.6.3"
openpyxl = "^3.1.2"
folium = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
